--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<style name="MyAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-
-
-
+<style name="MyAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 </style>
 
     <style name="TextLabel" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-
     </style>
+
+    <style name="BarTheme" parent="Theme.AppCompat.Light"></style>
 
 
 
