--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-
     <androidx.drawerlayout.widget.DrawerLayout
-
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/drawerLayout"
@@ -40,6 +37,8 @@
             android:id="@+id/navView"
             android:layout_width="wrap_content"
             android:layout_gravity="start"
+            app:headerLayout="@layout/nav_header"
+            android:fitsSystemWindows="true"
             app:menu="@menu/drawer_menu"
             android:layout_height="match_parent">
 
@@ -49,5 +48,4 @@
 
     </androidx.drawerlayout.widget.DrawerLayout>
 
-</layout>
 
