--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -29,6 +29,13 @@
         android:title="Profile">
 
         <menu>
+
+            <item android:id="@+id/favorites"
+                android:title="Favorites"
+                android:icon="@drawable/star">
+
+            </item>
+
             <item android:id="@+id/logout"
                 android:title="Log Out"
                 android:icon="@drawable/logout">
