google play sürümü

--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -7,7 +7,7 @@
     android:id="@+id/constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.EntryActivity">
+    tools:context=".view.activities.EntryActivity">
 
 
 
