--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -50,7 +50,8 @@
             android:id="@+id/nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="asd"
+            android:text="Welcome
+"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/ppImageView"
             app:layout_constraintEnd_toEndOf="parent"
