--- a/app/src/main/res/layout-mdpi/fragment_signup.xml
+++ b/app/src/main/res/layout-mdpi/fragment_signup.xml
@@ -24,6 +24,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutName"
         android:layout_width="0dp"
+
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         app:helperText="İsim Giriniz"
@@ -79,6 +80,7 @@
             android:id="@+id/signUpPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:hint="Şifre" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -100,6 +102,7 @@
             android:id="@+id/signUpPasswordTry"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:hint="Şifre Tekrar" />
     </com.google.android.material.textfield.TextInputLayout>
 
