--- a/app/src/main/res/navigation/my_navigation.xml
+++ b/app/src/main/res/navigation/my_navigation.xml
@@ -3,7 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_navigation"
+
     app:startDestination="@id/feedFragment">
+
+
+
+
+
+
 
     <fragment
         android:id="@+id/feedFragment"
@@ -13,8 +20,10 @@
         <action
             android:id="@+id/action_feedFragment_to_coinFragment"
             app:destination="@id/coinFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
+            />
+        <action
+            android:id="@+id/action_feedFragment_to_favoritesFragment"
+            app:destination="@id/favoritesFragment" />
     </fragment>
     <fragment
         android:id="@+id/coinFragment"
@@ -24,8 +33,7 @@
         <action
             android:id="@+id/action_coinFragment_to_feedFragment"
             app:destination="@id/feedFragment"
-            app:enterAnim="@android:anim/slide_out_right"
-            app:exitAnim="@android:anim/slide_out_right" />
+             />
         <argument
             android:name="coinId"
             app:argType="string"
