--- a/app/src/main/res/layout-mdpi/fragment_signup.xml
+++ b/app/src/main/res/layout-mdpi/fragment_signup.xml
@@ -27,7 +27,7 @@
 
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        app:helperText="İsim Giriniz"
+        app:helperText="Enter your Name"
         app:helperTextEnabled="true"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
@@ -39,7 +39,7 @@
             android:id="@+id/signupName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="İsim" />
+            android:hint="Name" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -47,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        app:helperText="E-Posta Giriniz"
+        app:helperText="Enter a Mail"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         app:helperTextEnabled="true"
@@ -59,7 +59,7 @@
             android:id="@+id/signupMail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="E-Posta" />
+            android:hint="E-Mail" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -69,7 +69,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        app:helperText="Şifre Giriniz"
+        app:helperText="Enter a Password"
         app:helperTextEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="Şifre" />
+            android:hint="Password" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -91,7 +91,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        app:helperText="Şifreyi Tekrardan Giriniz"
+        app:helperText="Enter Password Again"
         app:helperTextEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="Şifre Tekrar" />
+            android:hint="Password Again" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -111,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="ÜYE OL"
+        android:text="REGISTER"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:background="@drawable/round_button"
-        android:text="Üye Ol"
+        android:text="Register"
         android:textColor="@color/buttonTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
