--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -10,66 +10,49 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-    <data>
-        <variable
-            name="NavigationViewProfile"
-            type="com.tolgakurucay.cryptotolga.model.NavigationViewProfile" />
-
-
-    </data>
-
-
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
 
 
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="225dp"
 
         android:background="@drawable/header_background">
 
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ppImageView"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+
             android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:downloadImage="@{NavigationViewProfile.imageUrl}"
+            android:layout_marginTop="24dp"
             android:src="@drawable/person_image"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
 
         </de.hdodenhof.circleimageview.CircleImageView>
 
-
         <TextView
             android:id="@+id/nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome
-"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="8dp"
+            android:text="Welcome User"
             android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="@+id/ppImageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.434"
-            app:layout_constraintStart_toEndOf="@+id/ppImageView"
-            app:layout_constraintTop_toTopOf="@+id/ppImageView"
-            app:layout_constraintVertical_bias="0.197" />
+            app:layout_constraintStart_toStartOf="@+id/ppImageView"
+            app:layout_constraintTop_toBottomOf="@+id/ppImageView" />
 
         <TextView
             android:id="@+id/mailTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="@{NavigationViewProfile.mailAddress}"
+            android:layout_marginTop="8dp"
+            android:text="user@user.com"
             android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="@+id/ppImageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ppImageView" />
+            app:layout_constraintStart_toStartOf="@+id/nameTextView"
+            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
