--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
+
+
+
     <androidx.drawerlayout.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,22 +13,37 @@
         android:id="@+id/drawerLayout"
         tools:context=".view.activities.MainActivity">
 
+
+
+
+
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <include
+                android:id="@+id/appbar"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                layout="@layout/appbar">
+
+
+            </include>
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/fragmentContainerView"
                 android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 app:defaultNavHost="true"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/appbar"
                 app:navGraph="@navigation/my_navigation" />
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -39,6 +57,7 @@
             android:layout_gravity="start"
             app:headerLayout="@layout/nav_header"
             android:fitsSystemWindows="true"
+
             app:menu="@menu/drawer_menu"
             android:layout_height="match_parent">
 
@@ -47,5 +66,12 @@
 
 
     </androidx.drawerlayout.widget.DrawerLayout>
+
+
+
+
+
+
+
 
 
