--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<style name="MyAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+<style name="MyAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
 </style>
 
     <style name="TextLabel" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
     </style>
 
-    <style name="BarTheme" parent="Theme.AppCompat.Light"></style>
+
+    <style name="CustomActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="drawerArrowStyle">@style/DrawerColor</item>
+
+
+
+
+    </style>
+
+    <style name="DrawerColor" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@color/white</item>
+
+        <item name="android:src">@drawable/menu_icon</item>
+
+
+
+
+
+    </style>
+
+
+
 
 
 
