--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -23,8 +23,16 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/login_navigation" />
 
-
-
+        <ImageView
+            android:id="@+id/entryBackground"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/fragmentContainerView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/entry_background" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
