--- a/app/src/main/res/drawable/tool_bar_style.xml
+++ b/app/src/main/res/drawable/tool_bar_style.xml
@@ -2,8 +2,10 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/black"/>
+    <solid android:color="@color/black" />
     <corners android:bottomLeftRadius="30dp" android:bottomRightRadius="30dp"/>
+    <stroke android:color="@color/white" android:width="5dp"/>
+
 
 
 </shape>
